--- a/point-of-sale-app/k8-manifests/release/api-server.yaml
+++ b/point-of-sale-app/k8-manifests/release/api-server.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START anthosbaremetal_release_api_server_deployment_api_server]
+# [START anthosbaremetal_k8_manifests_release_api_server_deployment_api_server]
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: api-server
         # TODO:: remove the snapshot tag once we make the first release
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:v1-snapshot
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:snapshot
         env:
         - name: INVENTORY_EP
           valueFrom:
@@ -64,9 +64,9 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
-# [END anthosbaremetal_release_api_server_deployment_api_server]
+# [END anthosbaremetal_k8_manifests_release_api_server_deployment_api_server]
 ---
-# [START anthosbaremetal_release_api_server_service_api_server_svc]
+# [START anthosbaremetal_k8_manifests_release_api_server_service_api_server_svc]
 apiVersion: v1
 kind: Service
 metadata:
@@ -79,4 +79,4 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
-# [END anthosbaremetal_release_api_server_service_api_server_svc]
+# [END anthosbaremetal_k8_manifests_release_api_server_service_api_server_svc]
