--- a/point-of-sale-app/pom.xml
+++ b/point-of-sale-app/pom.xml
@@ -44,8 +44,6 @@
     <abm-edge.sdk.version>0.1.0-SNAPSHOT</abm-edge.sdk.version>
     <jib-maven.plugin.version>3.2.0</jib-maven.plugin.version>
     <spring-boot-maven.plugin.version>2.6.3</spring-boot-maven.plugin.version>
-    <mysql.connector.version>8.0.28</mysql.connector.version>
-    <h2.embedded.db.version>2.1.210</h2.embedded.db.version>
     <maven-checkstyle.plugin.version>3.1.2</maven-checkstyle.plugin.version>
     <maven-surefire.plugin.version>2.22.2</maven-surefire.plugin.version>
     <jacoco-maven.plugin.version>0.8.7</jacoco-maven.plugin.version>
@@ -77,23 +75,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-log4j2</artifactId>
         <version>${springboot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-data-jpa</artifactId>
-        <version>${springboot.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <scope>runtime</scope>
-        <version>${mysql.connector.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <scope>runtime</scope>
-        <version>${h2.embedded.db.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.gson</groupId>
@@ -134,6 +115,14 @@
             <from>
               <image>gcr.io/distroless/java11-debian11</image>
             </from>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-maven-plugin</artifactId>
+          <version>${spring-boot-maven.plugin.version}</version>
+          <configuration>
+            <addResources>true</addResources>
           </configuration>
         </plugin>
         <plugin>
