--- a/point-of-sale-app/skaffold.yaml
+++ b/point-of-sale-app/skaffold.yaml
@@ -23,31 +23,13 @@ deploy:
     - k8-manifests/service-configs.yaml
 # [END anthosbaremetal_point_of_sale_app_skaffold_config_setup]
 ---
-# [START anthosbaremetal_point_of_sale_app_skaffold_config_db]
-apiVersion: skaffold/v2beta21
-kind: Config
-metadata:
-  name: db # module defining spring profile & db configuration
-deploy:
-  kubectl:
-    manifests:
-    - k8-manifests/springprofile-mysql.yaml
-    - k8-manifests/mysql-db.yaml
-profiles:
-- name: inmemory
-  deploy:
-    kubectl:
-      manifests:
-      - k8-manifests/springprofile-h2.yaml
-# [END anthosbaremetal_point_of_sale_app_skaffold_config_db]
----
 # [START anthosbaremetal_point_of_sale_app_skaffold_config_backend]
 apiVersion: skaffold/v2beta21
 kind: Config
 metadata:
   name: backend # module defining backend services
 requires:
-- configs: [ setup, db ]
+- configs: [ setup ]
 profiles:
 - name: dev
   build:
