--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -83,6 +83,9 @@ steps:
     cat <<EOF > /workspace/deploy.sh -
     #!/bin/bash
 
+    DIR=$(pwd)
+    echo "Working from: $DIR"
+
     gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
 
     ./mvnw install
