--- a/src/payments/pom.xml
+++ b/src/payments/pom.xml
@@ -23,6 +23,7 @@
     <groupId>com.google.abm-edge</groupId>
     <artifactId>abm-edge-usecase</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>payments</artifactId>
   <name>payments</name>
