--- a/src/ui/pom.xml
+++ b/src/ui/pom.xml
@@ -24,6 +24,7 @@
     <groupId>com.google.abm-edge</groupId>
     <artifactId>abm-edge-usecase</artifactId>
     <version>0.1.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>ui</artifactId>
 
