--- a/src/api-server/pom.xml
+++ b/src/api-server/pom.xml
@@ -85,7 +85,7 @@
               <overwrite>true</overwrite>
               <resources>
                 <resource>
-                  <directory>${project.parent.basedir}/ui/target/dist
+                  <directory>${project.parent.basedir}/src/ui/target/dist
                   </directory>
                   <includes>
                     <include>static/</include>
