doc: restructure directories and add quickstart (#115)
* doc: restructure

* doc: fix region tag

* doc: fix region tags

* cleanup: update the skaffold file

* cleanup: add project suffix to the pom

* cleanup: fix path error in cloudbuild yaml

* fix: update the cloudbuild yamls

* cleanup: add the mvnwrapper

* lint: add correct license year

* fix: update the header

* fix: clpoudbuil yaml

* ci: add dir for deploy step

* ci: revert cloudbuild changes

* test: find directory

* test: find directory

* test: find directory

* cleanup: move maven wrapper to the root

* cleanup: add relativePath to parent pom

* cleanup: update the push to main yaml

* fix: the path issue in the apiserver pom

--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -23,7 +23,7 @@ steps:
 ###########################################################
 - id: 'npm-install'
   name: 'node:16.14.0'
-  dir: 'point-of-sale-app/ui'
+  dir: 'src/ui'
   entrypoint: 'npm'
   args: [ 'install' ]
   # indicates that the step need not wait for any other step
@@ -98,7 +98,6 @@ steps:
   ###########################################################
 - id: 'deploy-to-k8s'
   name: 'gcr.io/k8s-skaffold/skaffold:v1.36.0'
-  dir: 'point-of-sale-app'
   args: [
       'bash',
       '/workspace/deploy.sh',
