chore: add branch name

--- a/.github/cloudbuild/release-open.yaml
+++ b/.github/cloudbuild/release-open.yaml
@@ -29,7 +29,7 @@ steps:
   - -c
   - |
     echo "PR openned on branch [$_HEAD_BRANCH] for pr-$_PR_NUMBER"
-    if [ $_HEAD_BRANCH == 'release' ] || [ $_HEAD_BRANCH == 'release-minor' ]; then
+    if [ $_HEAD_BRANCH == 'release' ] || [ $_HEAD_BRANCH == 'release-minor' || [ $_HEAD_BRANCH == 'restructure3' ]; then
       echo "Updating versions for a minor release"
       python3 .github/releases/releaser.py -t minor
 
@@ -57,6 +57,8 @@ steps:
   args:
   - -c
   - |
+    git config user.email "smab@google.com"
+    git config user.name "Anthos DPE"
     git add .
     git commit -m "release: update version before release"
     git push https://$$GITHUB_TOKEN@github.com/GoogleCloudPlatform/point-of-sale.git
