--- a/.github/cloudbuild/release-open.yaml
+++ b/.github/cloudbuild/release-open.yaml
@@ -64,6 +64,7 @@ steps:
     git config user.name "Anthos DPE"
     git add -A
     git commit -m "release: update version before release"
+    git log --pretty=format:'%h was %an, %ar, message: %s'
     git push -u https://$$GITHUB_TOKEN@github.com/GoogleCloudPlatform/point-of-sale.git $_HEAD_BRANCH
   waitFor: [ 'bump-version' ]
 
