--- a/.github/cloudbuild/release-open.yaml
+++ b/.github/cloudbuild/release-open.yaml
@@ -62,7 +62,10 @@ steps:
   - |
     git config user.email "smab@google.com"
     git config user.name "Anthos DPE"
-    git checkout -b $_HEAD_BRANCH remotes/origin/$_HEAD_BRANCH
+    git remote set-branches --add origin $_HEAD_BRANCH
+    git fetch 'origin'
+    git checkout --track origin/$_HEAD_BRANCH
+
     git add -A
     git commit -m "release: update version before release"
     git push -u https://$$GITHUB_TOKEN@github.com/GoogleCloudPlatform/point-of-sale.git $_HEAD_BRANCH
