--- a/.github/cloudbuild/release-open.yaml
+++ b/.github/cloudbuild/release-open.yaml
@@ -62,6 +62,8 @@ steps:
   - |
     git config user.email "smab@google.com"
     git config user.name "Anthos DPE"
+
+    # as per: https://stackoverflow.com/a/67886960/3396045
     git remote set-branches --add origin $_HEAD_BRANCH
     git fetch 'origin'
     git checkout --track origin/$_HEAD_BRANCH
