--- a/.github/cloudbuild/publish-artifacts.yaml
+++ b/.github/cloudbuild/publish-artifacts.yaml
@@ -32,6 +32,32 @@ steps:
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
 
+- id: 'get-release-version'
+  name: 'python'
+  entrypoint: bash
+  args:
+  - -c
+  - |
+    pip install -r .github/releases/requirements.txt
+    if [ $_HEAD_BRANCH == 'release-minor' ] || [ $_HEAD_BRANCH == 'restructure3' ]; then
+      VERSION=$(python3 .github/releases/releaser.py -t minor -p)
+
+    elif [ $_HEAD_BRANCH == 'release-patch' ]; then
+      VERSION=$(python3 .github/releases/releaser.py -t patch -p)
+
+    elif [ $_HEAD_BRANCH == 'release-major' ]; then
+      VERSION=$(python3 .github/releases/releaser.py -t major -p)
+
+    else
+      echo "Nothing to do since it's not a 'release' PR"
+      exit 0
+    fi
+
+    echo "$$VERSION" >> /workspace/version.txt
+
+  # indicates that the step need not wait for any other step
+  waitFor: [ '-' ]
+
  ###########################################################
   # skaffold deploy to kubernetes cluster
   ###########################################################
@@ -41,10 +67,10 @@ steps:
   args:
   - -c
   - |
+    VERSION=$(cat /workspace/version.txt)
     ./mvnw install
-    skaffold build -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --tag=v$VERSION
-  # indicates that the step need not wait for any other step
-  waitFor: [ '-' ]
+    skaffold build -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --tag=v$$VERSION
+  waitFor: [ 'get-release-version' ]
 
 timeout: 1800s
 logsBucket: 'gs://pos-cloudbuild-logs'
