--- a/.github/cloudbuild/publish-artifacts.yaml
+++ b/.github/cloudbuild/publish-artifacts.yaml
@@ -28,6 +28,7 @@ steps:
   args:
   - -c
   - |
+    echo "Deploying the maven jars..."
     ./mvnw clean deploy
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
@@ -40,13 +41,13 @@ steps:
   - |
     pip install -r .github/releases/requirements.txt
     if [ $_HEAD_BRANCH == 'release-minor' ] || [ $_HEAD_BRANCH == 'restructure3' ]; then
-      VERSION=$(python3 .github/releases/releaser.py -t minor -p)
+      VERSION=$(python3 .github/releases/releaser.py -t minor -p true)
 
     elif [ $_HEAD_BRANCH == 'release-patch' ]; then
-      VERSION=$(python3 .github/releases/releaser.py -t patch -p)
+      VERSION=$(python3 .github/releases/releaser.py -t patch -p true)
 
     elif [ $_HEAD_BRANCH == 'release-major' ]; then
-      VERSION=$(python3 .github/releases/releaser.py -t major -p)
+      VERSION=$(python3 .github/releases/releaser.py -t major -p true)
 
     else
       echo "Nothing to do since it's not a 'release' PR"
@@ -68,7 +69,7 @@ steps:
   - -c
   - |
     VERSION=$(cat /workspace/version.txt)
-    ./mvnw install
+    echo "Publishing images with tag v$$VERSION..."
     skaffold build -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --tag=v$$VERSION
   waitFor: [ 'get-release-version' ]
 
