--- a/.github/cloudbuild/publish-artifacts.yaml
+++ b/.github/cloudbuild/publish-artifacts.yaml
@@ -54,7 +54,10 @@ steps:
       exit 0
     fi
 
-    echo "$$VERSION" >> /workspace/version.txt
+    echo "Version is [$$VERSION]"
+    cat <<EOF > /workspace/version.txt -
+    $$VERSION
+    EOF
 
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
@@ -70,6 +73,7 @@ steps:
   - |
     VERSION=$(cat /workspace/version.txt)
     echo "Publishing images with tag v$$VERSION..."
+    ./mvnw clean install
     skaffold build -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --tag=v$$VERSION
   waitFor: [ 'get-release-version' ]
 
