--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,6 @@
     <snakeyaml.version>1.30</snakeyaml.version>
     <springboot.version>2.6.2</springboot.version>
     <apache.commons.version>3.12.0</apache.commons.version>
-    <abm-edge.ui.version>0.1.0-SNAPSHOT</abm-edge.ui.version>
-    <abm-edge.sdk.version>0.1.0-SNAPSHOT</abm-edge.sdk.version>
     <jib-maven.plugin.version>3.2.0</jib-maven.plugin.version>
     <spring-boot-maven.plugin.version>2.6.3</spring-boot-maven.plugin.version>
     <mysql.connector.version>8.0.28</mysql.connector.version>
@@ -111,12 +109,12 @@
       <dependency>
         <groupId>com.google.abm-edge</groupId>
         <artifactId>ui</artifactId>
-        <version>${abm-edge.ui.version}</version>
+        <version>${pom.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.abm-edge</groupId>
         <artifactId>service-sdk</artifactId>
-        <version>${abm-edge.sdk.version}</version>
+        <version>${pom.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
