--- a/src/payments/pom.xml
+++ b/src/payments/pom.xml
@@ -52,6 +52,10 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
+     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
@@ -63,12 +67,6 @@
     <dependency>
       <groupId>com.google.abm-edge</groupId>
       <artifactId>service-sdk</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.google.abm-edge</groupId>
-      <artifactId>inventory</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
 
