chore: fix the version and deps

--- a/.github/cloudbuild/publish-artifacts.yaml
+++ b/.github/cloudbuild/publish-artifacts.yaml
@@ -40,7 +40,7 @@ steps:
   - -c
   - |
     echo "Deploying the maven jars..."
-    ./mvnw clean deploy
+    ./mvnw deploy
   # indicates that the step need not wait for any other step
   waitFor: [ 'npm-install' ]
 
