--- a/.github/cloudbuild/publish-artifacts.yaml
+++ b/.github/cloudbuild/publish-artifacts.yaml
@@ -20,17 +20,6 @@
 
 steps:
   ###########################################################
-  # npm install to ensure ui dependencies have no errors
-  ###########################################################
-- id: 'npm-install'
-  name: 'node:16.14.0'
-  dir: 'src/ui'
-  entrypoint: 'npm'
-  args: [ 'install' ]
-  # indicates that the step need not wait for any other step
-  waitFor: [ '-' ]
-
-  ###########################################################
   # publish jars to artifact registry
   ###########################################################
 - id: 'publish-jars'
@@ -40,6 +29,7 @@ steps:
   - -c
   - |
     echo "Deploying the maven jars..."
+    ./mvnw install
     ./mvnw deploy
   # indicates that the step need not wait for any other step
   waitFor: [ 'npm-install' ]
