--- a/k8-manifests/release/payments.yaml
+++ b/k8-manifests/release/payments.yaml
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: payments
         # TODO:: remove the snapshot tag once we make the first release
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/payments:v1-snapshot
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/payments:v0.0.0
         env:
         - name: SPRING_PROFILES_ACTIVE
           valueFrom:
