--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -99,7 +99,6 @@ steps:
       echo "Nothing to do since it's not a 'release' PR"
       exit 0
     fi
-    echo "RELEASE_COMPLETE" >> /workspace/release.done
   # waitFor: commented out, so this step waits for all previous steps
 
   ###########################################################
@@ -141,8 +140,9 @@ steps:
     - **Artifacts Published**: Maven JARs and Container images for release version **v$$VERSION** have been published to Artifact Registry
     - **Manifests Updated**: [Release manifests](https://github.com/GoogleCloudPlatform/point-of-sale/tree/$BRANCH_NAME/k8-manifests/release) have been updated to use the version **v$$VERSION** images
     - **Version bumped:** Version in the pom.xml/package.json has been bumped to the next `patch` release version
+    - **Merge PR:** Inspect the latest changes and merge the PR to main to complete the release.
 
-    :rocket: Run the ["pos-deploy-release"](https://console.cloud.google.com/cloud-build/triggers;region=global?project=point-of-sale-ci) trigger to deploy the latest release!!!
+    :rocket: Don't forget to run the ["pos-deploy-release"](https://console.cloud.google.com/cloud-build/triggers;region=global?project=point-of-sale-ci) trigger to deploy the latest release!!!
     EOF
     gh pr comment $_PR_NUMBER --repo $_HEAD_REPO_URL --body-file /workspace/gh-comment.txt
   # waitFor: commented out, so this step waits for all previous steps
