--- a/src/inventory/pom.xml
+++ b/src/inventory/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.abm-edge</groupId>
     <artifactId>abm-edge-usecase</artifactId>
-    <version>0.2.0</version>
+    <version>0.1.0-SNAPSHOT</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>inventory</artifactId>
