--- a/.github/cloudbuild/pos-deploy-release.yaml
+++ b/.github/cloudbuild/pos-deploy-release.yaml
@@ -14,12 +14,15 @@
 
 ###########################################################
 # This is a GCP CloudBuild Trigger config file. The trigger
-# is for a Push event to the main branch
+# is to be used to build and publish the latest release
+# artifacts to repostiories (container-image and maven).
+# The trigger associated to this cloudbuild confiuration
+# needs to be manually RUN pointing to the release-branch
 ###########################################################
 
 steps:
   ###########################################################
-  # create namespace yaml for the PR
+  # create namespace yaml for the release deployment
   ###########################################################
 - id: 'create-deploy-script'
   name: ubuntu
@@ -32,13 +35,13 @@ steps:
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: $_STAGING_NS-db
+      name: $_MAIN_NS-db
     ---
     # namespace to deploy the inmemory h2 db based deployment
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: $_STAGING_NS-inmemory
+      name: $_MAIN_NS-inmemory
     EOF
 
     cat <<EOF > /workspace/deploy.sh -
@@ -48,8 +51,8 @@ steps:
     kubectl apply -f /workspace/namespace.yaml
 
     ./mvnw install
-    skaffold run -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS-db --tag=$COMMIT_SHA-db
-    skaffold run -p dev,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS-inmemory --tag=$COMMIT_SHA-inmemory
+    skaffold run -p release -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_MAIN_NS-db
+    skaffold run -p release,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_MAIN_NS-inmemory
     EOF
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
@@ -57,7 +60,7 @@ steps:
   ###########################################################
   # skaffold deploy to kubernetes cluster
   ###########################################################
-- id: 'deploy-to-k8s'
+- id: 'deploy-to-k8s-main'
   name: 'gcr.io/k8s-skaffold/skaffold:v1.36.0'
   args: [
       'bash',
@@ -65,7 +68,8 @@ steps:
   ]
   # waitFor: commented out, so this step waits for all previous steps
 
+
 timeout: 1800s
 logsBucket: 'gs://pos-cloudbuild-logs'
 options:
-  logging: GCS_ONLY
+    logging: GCS_ONLY
