--- a/.github/cloudbuild/pos-publish-release-artifacts.yaml
+++ b/.github/cloudbuild/pos-publish-release-artifacts.yaml
@@ -99,6 +99,11 @@ steps:
       echo "Nothing to do since it's not a 'release' PR"
       exit 0
     fi
+
+    echo "Next SNAPSHOT version is [$$VERSION]"
+    cat <<EOF > /workspace/version-snapshot.txt -
+    $$VERSION
+    EOF
   # waitFor: commented out, so this step waits for all previous steps
 
   ###########################################################
@@ -128,11 +133,13 @@ steps:
     git push -u https://$$GITHUB_TOKEN@github.com/GoogleCloudPlatform/point-of-sale.git $BRANCH_NAME
 
     VERSION=$(cat /workspace/version.txt)
+    SNAPSHOT_VERSION=$(cat /workspace/version-snapshot.txt)
+
     cat <<EOF > /workspace/gh-comment.txt -
     :zap:  Release Status :zap: </br>
     - **Artifacts Published**: Maven JARs and Container images for release version **v$$VERSION** have been published to Artifact Registry
     - **Manifests Updated**: [Release manifests](https://github.com/GoogleCloudPlatform/point-of-sale/tree/$BRANCH_NAME/k8-manifests/release) have been updated to use the version **v$$VERSION** images
-    - **Version bumped:** Version in the _pom.xml/package.json_ has been bumped to the next **patch** release version
+    - **Version bumped:** Version in the _pom.xml/package.json_ has been bumped to the snapshot version of the next **patch** release **v$$SNAPSHOT_VERSION**
     - **Merge PR:** Inspect the latest changes and merge the PR to main to complete the release.
 
     :rocket: Don't forget to run the ["pos-deploy-release"](https://console.cloud.google.com/cloud-build/triggers;region=global?project=point-of-sale-ci) trigger to deploy the latest release!!!
